--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,10 +1,33 @@
+cachetools==5.2.0
+certifi==2022.6.15
+charset-normalizer==2.0.12
 click==8.1.3
 Flask==2.1.2
 Flask-Cors==3.0.10
+google-api-core==2.8.2
+google-auth==2.8.0
+google-cloud-core==2.3.1
+google-cloud-storage==2.4.0
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.2
+greenlet==1.1.2
+idna==3.3
 importlib-metadata==4.11.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pytest==7.1.2
+requests==2.28.0
+PyMySQL==1.0.2
+requests==2.28.0
+rsa==4.8
 six==1.16.0
+SQLAlchemy==1.4.37
+sqlparse==0.4.2
+urllib3==1.26.9
 Werkzeug==2.1.2
 zipp==3.8.0
