--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -1,3 +1,4 @@
+attrs==21.4.0
 cachetools==5.2.0
 certifi==2022.6.15
 charset-normalizer==2.0.12
@@ -14,20 +15,25 @@ googleapis-common-protos==1.56.2
 greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.11.4
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+packaging==21.3
+pluggy==1.0.0
 protobuf==3.20.1
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pytest==7.1.2
-requests==2.28.0
 PyMySQL==1.0.2
+pyparsing==3.0.9
+pytest==7.1.2
 requests==2.28.0
 rsa==4.8
 six==1.16.0
 SQLAlchemy==1.4.37
 sqlparse==0.4.2
+tomli==2.0.1
 urllib3==1.26.9
 Werkzeug==2.1.2
 zipp==3.8.0
