--- a/front-end/package.json
+++ b/front-end/package.json
@@ -66,7 +66,16 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-plugin-prettier": "^4.1.0",
+    "husky": "^8.0.1",
+    "prettier": "2.7.1",
+    "pretty-quick": "^3.1.3",
     "prop-types": "^15.8.1",
     "webpack": "^5.73.0"
-  }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+ }
 }
