--- a/front-end/.eslintrc
+++ b/front-end/.eslintrc
@@ -2,6 +2,6 @@
     "extends": "react-app",
     "plugins": ["prettier"],
     "rules": {
-      "prettier/prettier": 0,
+      "prettier/prettier": 0
     }
 }
