--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,7 +25,8 @@
     "test": "craco test",
     "eject": "craco eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prepare": "cd .. && husky install front-end/.husky"
   },
   "eslintConfig": {
     "extends": [
@@ -67,8 +68,8 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint-plugin-prettier": "^4.1.0",
-    "husky": "^8.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.0",
     "prettier": "2.7.1",
     "pretty-quick": "^3.1.3",
     "prop-types": "^15.8.1",
