--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.21.3",
+    "antd-img-crop": "^4.2.3",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "react": "^18.2.0",
