--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-collapsed": "^3.3.2",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
